src/target/x86_64-pc-windows-gnu/release/build/crystal-palace-sys-42841dc9ae1f85bb/out/tcg_bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IMPORTFUNCS {
    pub LoadLibraryA: ::core::option::Option<unsafe extern "system" fn(arg1: LPCSTR) -> HMODULE>,
    pub GetProcAddress:
        ::core::option::Option<unsafe extern "system" fn(arg1: HMODULE, arg2: LPCSTR) -> FARPROC>,
}
unsafe extern "C" {
    pub fn __resolve_hook(funcHash: DWORD) -> FARPROC;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct DLLDATA {
    pub DosHeader: *mut IMAGE_DOS_HEADER,
    pub NtHeaders: *mut IMAGE_NT_HEADERS,
    pub OptionalHeader: *mut IMAGE_OPTIONAL_HEADER,
}
unsafe extern "C" {
    pub fn adler32sum(buffer: *mut core::ffi::c_uchar, length: DWORD) -> DWORD;
}
unsafe extern "C" {
    pub fn ror13hash(c: *const core::ffi::c_char) -> DWORD;
}
unsafe extern "C" {
    pub fn dprintf(format: *mut core::ffi::c_char, ...);
}
pub type PICOMAIN_FUNC = ::core::option::Option<unsafe extern "C" fn(arg: *mut core::ffi::c_char)>;
unsafe extern "C" {
    pub fn PicoGetExport(
        src: *mut core::ffi::c_char,
        base: *mut core::ffi::c_char,
        tag: core::ffi::c_int,
    ) -> PICOMAIN_FUNC;
}
unsafe extern "C" {
    pub fn PicoEntryPoint(
        src: *mut core::ffi::c_char,
        base: *mut core::ffi::c_char,
    ) -> PICOMAIN_FUNC;
}
unsafe extern "C" {
    pub fn PicoCodeSize(src: *mut core::ffi::c_char) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn PicoDataSize(src: *mut core::ffi::c_char) -> core::ffi::c_int;
}
unsafe extern "C" {
    pub fn PicoLoad(
        funcs: *mut IMPORTFUNCS,
        src: *mut core::ffi::c_char,
        dstCode: *mut core::ffi::c_char,
        dstData: *mut core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn findFunctionByHash(hModule: HANDLE, wantedFunctionHash: DWORD) -> FARPROC;
}
unsafe extern "C" {
    pub fn findModuleByHash(moduleHash: DWORD) -> HANDLE;
}
pub type DLLMAIN_FUNC = ::core::option::Option<
    unsafe extern "C" fn(arg1: HINSTANCE, arg2: DWORD, arg3: LPVOID) -> BOOL,
>;
unsafe extern "C" {
    pub fn EntryPoint(dll: *mut DLLDATA, base: *mut core::ffi::c_void) -> DLLMAIN_FUNC;
}
unsafe extern "C" {
    pub fn GetDataDirectory(dll: *mut DLLDATA, entry: UINT) -> *mut IMAGE_DATA_DIRECTORY;
}
unsafe extern "C" {
    pub fn LoadDLL(dll: *mut DLLDATA, src: *mut core::ffi::c_char, dst: *mut core::ffi::c_char);
}
unsafe extern "C" {
    pub fn LoadSections(
        dll: *mut DLLDATA,
        src: *mut core::ffi::c_char,
        dst: *mut core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn ParseDLL(src: *mut core::ffi::c_char, data: *mut DLLDATA);
}
unsafe extern "C" {
    pub fn ProcessImports(funcs: *mut IMPORTFUNCS, dll: *mut DLLDATA, dst: *mut core::ffi::c_char);
}
unsafe extern "C" {
    pub fn ProcessRelocations(
        dll: *mut DLLDATA,
        src: *mut core::ffi::c_char,
        dst: *mut core::ffi::c_char,
    );
}
unsafe extern "C" {
    pub fn SizeOfDLL(data: *mut DLLDATA) -> DWORD;
}
